revert - added base path again
fails to render on a lot of platforms without it

--- a/xml/rosbot/fop.conf
+++ b/xml/rosbot/fop.conf
@@ -14,7 +14,7 @@ the location of this file.
 
 <!-- NOTE: This is the version of the configuration -->
 <fop version="1.1">
-
+ <base>.</base> 
   <font-base>.</font-base>
   <!-- Source resolution in dpi (dots/pixels per inch) for determining the size of pixels in SVG and bitmap images, default: 72dpi -->
   <source-resolution>72</source-resolution>
